2009-10-15  Antonello Provenzano  <antonello@deveel.com>
	* DatabaseConnection.cs: method GetDbConnection now returns
	a generic IDbConnection.
	* TransactionSystem.cs: now implements IDisposable pattern.

2009-10-14  Antonello Provenzano  <antonello@deveel.com>
	* TObject.cs: 
		- introduced implicit and explicit operators.
		- implemented the Mod function
	
2009-10-12  Antonello Provenzano  <antonello@deveel.com>
	* SelectableScheme.cs: removed methods WriteTo and ReadFrom 
	(present in the old version of McKoi), to prepare the
		introduction of new indices.
	* BlobStore.cs: removed references to #ZipLib to replace
	it with Deveel Zip.
	
2009-10-09  Antonello Provenzano  <antonello@deveel.com>
	* TableDataConglomerate.cs: global renaming for code clarity
		- SYS_INFO -> SYSTEM
		- SYSTEM.sUSRSchemaInfo -> SYSTEM.SCHEMA_INFO
	* Database.cs: 
		- renamed SYS_INFO schema to 'SYSTEM' for code clarity
		- renamed SYS_JDBC to INFORMATION_SCHEMA to comply with
		the SQL standards
			+ Catalogs -> CATALOGS (basically, no change)
			+ Schemas -> SCHEMATA
			+ Tables -> TABLES (basically, no change)
			+ Columns -> COLUMNS (basically, no change)
			+ ColumnPrivileges -> COLUMN_PRIVILEGES
			+ TablePrivileges -> TABLE_PRIVILEGES
	* ParameterSubstiturion.cs: implemented support for named
	parameters.

2009-10-05  Antonello Provenzano  <antonello@deveel.com>
	* DatabaseEventHandler.cs: implementation to handle a different
	behavior of the database event interface logic.
	* Database.cs: 
		- added an overload of the methods Execute and CreateEvent 
		to accept EventHandler delegates.
		- modified the RegisterShutDownDelegate method parameters
		to comply with the new database event interface logic.
	* DatabaseSystem.cs: 
		- modified the parameters of the method RegisterShutDownDelegate 
		to comply with the new database event interface logic.
		- Naming conventions applied

2009-10-04  Antonello Provenzano  <antonello@deveel.com>