@@ -1,3 +1,7 @@
+2009-10-20  Antonello Provenzano  <antonello@deveel.com>
+	* SQLTypes.cs: added the members for interval type (SECOND,
+	MINUTE, HOUR, DAY, MONTH, YEAR and INTERVAL)
+	
 2009-10-15  Antonello Provenzano  <antonello@deveel.com>
 	* DatabaseConnection.cs: method GetDbConnection now returns
 	a generic IDbConnection.
